[tool.poetry]
name = "langchain-fastapi"
version = "0.1.0"
description = ""
authors = ["Jai SIngh <44313028+jai8004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
langchain ="*"
uvicorn="*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

